welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: identifier expected but 'false' found.
var vuBiscuit : Boolean == false;
                           ^