welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var vuBiscuit : Boolean == false;
while(vuBiscuit() == false) {
	for (compteur1 <- 1 to 7) {
		avance();
		pas = pas + 1;
		if (estSurBiscuit() == true) {
			vuBiscuit() = true;
	}	
	}
}
}
